--- a/index.html
+++ b/index.html
@@ -4,6 +4,6 @@
 	<title>Hello World!</title>
 </head>
 <body>
-<h1> Hellor World </h1>
+<p> Hello World! <span> Holly High! </span> </h1>
 </body>
 </html>
